@@ -65,11 +65,6 @@ max_brake 80000 #for soft brakes, drifting is always inf
 #(drifting brakes are not affected - always locks rear wheels)
 brake_distribution 0.5 #braking %50 front and back
 
-#this is guaranteed to completely lock the rear wheels
-#(only good when wheel mass is much lower than car mass)
-handbrake_lock true
-
-
 
 #
 #steering:
@@ -228,8 +223,6 @@ model:offset 0 0 0
 
 
 #debug values for disabling/enabling certain features:
-debug:turn true #turn steering wheels (if disabled, look at adapt. redist.)
-debug:gyroscopic true #gyroscopic effect on wheels
 #currently, wheel geoms (cylinders) can't collide with eash others
 #use alternative geoms? (bodies/mass will remain cylinders)
 debug:sphere_wheels false
