@@ -42,7 +42,8 @@ ReCaged 0.7.1 "The Sky's the Limit" (?/?/2014)
    * Each wheel now stores its own set of parameters (independent of car, can
      support unattached wheels, different front/rear wheel handling and imilar)
    * Wheel axles can now break (more a proof-of-concept than actual gameplay)
-   * New soft-brake/rolling-resistance code (more reliable at low speeds)
+   * New soft brake/brake-throttle transition code (more reliable at low speed)
+   * New rolling resistance code (more reliable at low speed/varying load)
    * Less bending of wheel axles at high speeds
    *..... TODO!
 
